// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defined type CREATE_CREDENTIAL_SHOW 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": true,
      "credential": null,
      "credentialType": undefined,
      "delete": false,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "show": true,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "CREATE_CREDENTIAL_SHOW",
}
`;

exports[`defined type EDIT_CREDENTIAL_SHOW 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": undefined,
      "credentialType": "",
      "delete": false,
      "edit": true,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "show": true,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "EDIT_CREDENTIAL_SHOW",
}
`;

exports[`defined type UPDATE_CREDENTIAL_HIDE 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": false,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "UPDATE_CREDENTIAL_HIDE",
}
`;

exports[`fulfilled types ADD_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": true,
      "credential": Object {
        "test": "success",
      },
      "credentialType": "",
      "delete": false,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "ADD_CREDENTIAL_FULFILLED",
}
`;

exports[`fulfilled types DELETE_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": true,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "DELETE_CREDENTIAL_FULFILLED",
}
`;

exports[`fulfilled types DELETE_CREDENTIALS 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": true,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "DELETE_CREDENTIALS_FULFILLED",
}
`;

exports[`fulfilled types GET_CREDENTIALS 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": false,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
    },
  },
  "type": "GET_CREDENTIALS_FULFILLED",
}
`;

exports[`fulfilled types UPDATE_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": Object {
        "test": "success",
      },
      "credentialType": "",
      "delete": false,
      "edit": true,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "UPDATE_CREDENTIAL_FULFILLED",
}
`;

exports[`pending types ADD_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": false,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "ADD_CREDENTIAL_PENDING",
}
`;

exports[`pending types DELETE_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": true,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "DELETE_CREDENTIAL_PENDING",
}
`;

exports[`pending types DELETE_CREDENTIALS 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": true,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "DELETE_CREDENTIALS_PENDING",
}
`;

exports[`pending types GET_CREDENTIALS 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": false,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
    },
  },
  "type": "GET_CREDENTIALS_PENDING",
}
`;

exports[`pending types UPDATE_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": false,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "UPDATE_CREDENTIAL_PENDING",
}
`;

exports[`rejected types ADD_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": true,
      "credential": null,
      "credentialType": "",
      "delete": false,
      "edit": false,
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "ADD_CREDENTIAL_REJECTED",
}
`;

exports[`rejected types DELETE_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": true,
      "edit": false,
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "DELETE_CREDENTIAL_REJECTED",
}
`;

exports[`rejected types DELETE_CREDENTIALS 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": true,
      "edit": false,
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "DELETE_CREDENTIALS_REJECTED",
}
`;

exports[`rejected types GET_CREDENTIALS 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": false,
      "edit": false,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "GET_CREDENTIALS_REJECTED",
}
`;

exports[`rejected types UPDATE_CREDENTIAL 1`] = `
Object {
  "result": Object {
    "update": Object {
      "add": false,
      "credential": null,
      "credentialType": "",
      "delete": false,
      "edit": true,
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
      "show": false,
    },
    "view": Object {
      "credentials": Array [],
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "UPDATE_CREDENTIAL_REJECTED",
}
`;
